--- a/Css/style.css
+++ b/Css/style.css
@@ -19,5 +19,12 @@ h2{
 
 body{
 background-color: rgb(rgb(192, 54, 54); 
-   
+
+}
+
+header ul li {
+    padding: 20px;
+    text-align: center;
+    display: inline-block;
+    
 }
